--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "cf-style-container": "^6.0.1",
     "cf-style-nextjs": "^1.0.0",
+    "moment": "^2.24.0",
     "next": "^9.0.3",
     "prettier": "^1.8.2",
     "react": "^16.8.0",
